# APIMockLite

./: .gitignore  pyproject.toml  requirements.txt  setup.py
apimocklite/: __init__.py  __main__.py  cli.py  config.py  generator.py  recorder.py  server.py  tui.py
examples/: basic-config.yaml  scenarios.yaml
