[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apimocklite"
version = "1.0.0"
authors = [
    {name = "gitstq"},
]
description = "🚀 APIMockLite - Lightweight AI-Powered API Mock Server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["api", "mock", "server", "testing", "development", "http", "rest", "ai", "cli"]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev = ["pytest>=7.0", "black", "flake8", "mypy"]

[project.scripts]
apimocklite = "apimocklite.cli:main"
apiml = "apimocklite.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/APIMockLite"
Documentation = "https://github.com/gitstq/APIMockLite#readme"
Repository = "https://github.com/gitstq/APIMockLite"
Issues = "https://github.com/gitstq/APIMockLite/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["apimocklite*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
